<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:gravity="center"
    android:padding="@dimen/space20">

    <TextView
        style="@style/TextStyleIncall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:drawableStart="@mipmap/icon_incall_horn"
        android:text="@string/incall_visitor_come_des" />

    <TextView
        android:id="@+id/tv_incall_address"
        style="@style/TextStyleIncall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:drawableStart="@mipmap/icon_incall_location"
        android:maxLines="2" />

    <ImageView
        android:id="@+id/iv_incall_picture"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@id/tv_incall_address"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space20"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_incall_no_pic" />

    <Button
        android:id="@+id/bt_incall_confirm"
        style="@style/TextStyleSmallWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/iv_incall_picture"
        android:background="@drawable/incall_button_selector"
        android:text="@string/incall_dialog_open_door" />

    <Button
        android:id="@+id/bt_incall_cancel"
        style="@style/TextStyleSmallWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/iv_incall_picture"
        android:background="@drawable/incall_button_selector"
        android:text="@string/incall_dialog_open_refuse" />

</RelativeLayout>
